# Thucia

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml  thucia.yaml
data/cases/BRA/: load_cases.py
dev/: README.md
docs/: conf.py  index.md  requirements.txt
pipeline/: analysis_core.py  analysis_flow.py  analysis_manual.py  r2.py
src/thucia/: __init__.py
src/thucia/cli/: __init__.py  steps.py
src/thucia/core/: logging.py
src/thucia/core/cache/: CacheBase.py  SQLiteCache.py  __init__.py
src/thucia/core/cases/: __init__.py  wis.py
src/thucia/core/containers/: __init__.py
src/thucia/core/fs/: DataFrame.py  __init__.py
src/thucia/core/geo/: __init__.py  plugin_base.py  plugin_loader.py  stats.py
src/thucia/core/geo/sources/: edo.py  noaa.py  worldclim.py  worldpop.py
src/thucia/core/models/: __init__.py  baseline.py  chronos.py  climate.R  climate.py  ensemble.py  inla.py  movavg.py  nbeats.py  nhits.py  sarima.py  tcn.py  tcn2.py  tcn3.py  tft.py  tide.py  timesfm.py  utils.py  xgboost.py
src/thucia/core/models/climate/: Dockerfile  climate.R
src/thucia/core/models/darts/: __init__.py  __init__BasePooledSamples.py
src/thucia/flow/: logging.py  wrappers.py
src/thucia/flow/cases/: __init__.py
src/thucia/flow/containers/: __init__.py
src/thucia/flow/fs/: __init__.py
src/thucia/flow/geo/: __init__.py
src/thucia/flow/models/: __init__.py
src/thucia/viz/: __init__.py  maps.py
src/thucia/viz/dashboard/: app.py  requirements.txt
tests/: smoke_test.py
tests/thucia/core/cases/: test_cases.py
tests/thucia/core/containers/: test_containers.py
tests/thucia/core/fs/: test_fs.py
tests/thucia/core/models/: test_baseline.py  test_timesfm.py
tests/thucia/pipeline/: generate_test_data.py  test_pipeline.py
tests/thucia/pipeline/test_data/: cases.csv
(+8 files in other folders)
