[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "Thucia"
dynamic = ["version"]
description = "Thucia"
readme = "README.md"
requires-python = ">=3.11"
scripts = { thucia = "thucia:main" }
dependencies = [
    "darts>=0.35.0",
    "docker>=7.1.0",
    "duckdb>=1.4.1",
    "flax>=0.11.0",
    "geopandas>=1.1.0",
    "netcdf4>=1.7.2",
    "openpyxl>=3.1.5",
    "platformdirs>=4.3.8",
    "podman>=5.5.0",
    "pyarrow>=20.0.0",
    "rapidfuzz>=3.13.0",
    "rasterstats>=0.20.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "xarray>=2025.6.0",
]

[project.optional-dependencies]
prefect = [
    "prefect>=3.4.6",
]
vis = [
    "streamlit>=1.45.1",
    "colorcet>=3.1.0",
    "seaborn>=0.13.2",
]
timesfm = [
    "timesfm[torch]>=1.3.0",
]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
all = [
    "prefect>=3.4.6",
    "streamlit>=1.45.1",
    "colorcet>=3.1.0",
    "seaborn>=0.13.2",
    "timesfm[torch]>=1.3.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.setuptools_scm]
